finished pagination and tweeks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_download">Download</string>
     <string name="title_activity_book_details_view">BookDetailsView</string>
 
     <string name="drawer_open">Open navigation drawer</string>
